<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="335dp"
        android:layout_height="152dp"
        android:layout_marginTop="112dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="6dp"
        app:contentPadding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/show_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_gravity="center"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/chewy"
        android:text="@string/title_name"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ans_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/prev_button"
        android:layout_width="58dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:background="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <Button
        android:id="@+id/true_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/true_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toEndOf="@+id/prev_button"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/false_text"
        android:textAlignment="center"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageView
        android:id="@+id/next_button"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@android:drawable/ic_media_next" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/reset_text"
        android:textAlignment="center"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/true_button"
        app:layout_constraintVertical_bias="0.009" />

    <Button
        android:id="@+id/check_button"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/check_string"
        android:textAlignment="center"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toEndOf="@+id/reset_button"
        app:layout_constraintTop_toBottomOf="@+id/false_button"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>